feat: prepare pagination for later use